--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">SearchUserGithub</string>
+    <string name="msg_no_network_available">No network available, try again !</string>
+    <string name="error_field_required">This field is required !!!</string>
+    <string name="error_limit_result">Result limit in [1,100]</string>
+    <string name="search">Search</string>
+    <string name="limit">Limit</string>
+    <string name="git_search">Git Search</string>
+    <string name="keyword">Keyword</string>
 </resources>
