MVP + Room architecture

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="limit">Limit</string>
     <string name="git_search">Git Search</string>
     <string name="keyword">Keyword</string>
+    <string name="task_room_manager">Task Room Manager</string>
 </resources>
